update App.js to include downnload to csv

--- a/code/backend/templates/home_dimit_local.html
+++ b/code/backend/templates/home_dimit_local.html
@@ -24,7 +24,7 @@
               <div class="col-lg-8 mx-auto">
                   <h2 class="text-white mb-4 section-heading">Try it out!</h2>
                   <i class="fas fa-cogs fa-2x text-white"></i>
-                  <noscript>You need to enable JavaScript to run this app.</noscript><div id="root" class="m-5"></div><script>!function(e){function r(r){for(var n,a,i=r[0],c=r[1],f=r[2],s=0,p=[];s<i.length;s++)a=i[s],Object.prototype.hasOwnProperty.call(o,a)&&o[a]&&p.push(o[a][0]),o[a]=0;for(n in c)Object.prototype.hasOwnProperty.call(c,n)&&(e[n]=c[n]);for(l&&l(r);p.length;)p.shift()();return u.push.apply(u,f||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,i=1;i<t.length;i++){var c=t[i];0!==o[c]&&(n=!1)}n&&(u.splice(r--,1),e=a(a.s=t[0]))}return e}var n={},o={1:0},u=[];function a(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,a),t.l=!0,t.exports}a.e=function(e){var r=[],t=o[e];if(0!==t)if(t)r.push(t[2]);else{var n=new Promise((function(r,n){t=o[e]=[r,n]}));r.push(t[2]=n);var u,i=document.createElement("script");i.charset="utf-8",i.timeout=120,a.nc&&i.setAttribute("nonce",a.nc),i.src=function(e){return a.p+"static/js/"+({}[e]||e)+"."+{3:"cc6af675"}[e]+".chunk.js"}(e);var c=new Error;u=function(r){i.onerror=i.onload=null,clearTimeout(f);var t=o[e];if(0!==t){if(t){var n=r&&("load"===r.type?"missing":r.type),u=r&&r.target&&r.target.src;c.message="Loading chunk "+e+" failed.\n("+n+": "+u+")",c.name="ChunkLoadError",c.type=n,c.request=u,t[1](c)}o[e]=void 0}};var f=setTimeout((function(){u({type:"timeout",target:i})}),12e4);i.onerror=i.onload=u,document.head.appendChild(i)}return Promise.all(r)},a.m=e,a.c=n,a.d=function(e,r,t){a.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},a.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},a.t=function(e,r){if(1&r&&(e=a(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(a.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)a.d(t,n,function(r){return e[r]}.bind(null,n));return t},a.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return a.d(r,"a",r),r},a.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},a.p="/",a.oe=function(e){throw console.error(e),e};var i=this.webpackJsonpfrontend=this.webpackJsonpfrontend||[],c=i.push.bind(i);i.push=r,i=i.slice();for(var f=0;f<i.length;f++)r(i[f]);var l=c;t()}([])</script><script src="/static/js/2.784ca970.chunk.js"></script><script src="/static/js/main.9cb07e96.chunk.js"></script>
+                  <noscript>You need to enable JavaScript to run this app.</noscript><div id="root" class="m-5"></div><script>!function(e){function r(r){for(var n,a,i=r[0],c=r[1],f=r[2],s=0,p=[];s<i.length;s++)a=i[s],Object.prototype.hasOwnProperty.call(o,a)&&o[a]&&p.push(o[a][0]),o[a]=0;for(n in c)Object.prototype.hasOwnProperty.call(c,n)&&(e[n]=c[n]);for(l&&l(r);p.length;)p.shift()();return u.push.apply(u,f||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,i=1;i<t.length;i++){var c=t[i];0!==o[c]&&(n=!1)}n&&(u.splice(r--,1),e=a(a.s=t[0]))}return e}var n={},o={1:0},u=[];function a(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,a),t.l=!0,t.exports}a.e=function(e){var r=[],t=o[e];if(0!==t)if(t)r.push(t[2]);else{var n=new Promise((function(r,n){t=o[e]=[r,n]}));r.push(t[2]=n);var u,i=document.createElement("script");i.charset="utf-8",i.timeout=120,a.nc&&i.setAttribute("nonce",a.nc),i.src=function(e){return a.p+"static/js/"+({}[e]||e)+"."+{3:"cc6af675"}[e]+".chunk.js"}(e);var c=new Error;u=function(r){i.onerror=i.onload=null,clearTimeout(f);var t=o[e];if(0!==t){if(t){var n=r&&("load"===r.type?"missing":r.type),u=r&&r.target&&r.target.src;c.message="Loading chunk "+e+" failed.\n("+n+": "+u+")",c.name="ChunkLoadError",c.type=n,c.request=u,t[1](c)}o[e]=void 0}};var f=setTimeout((function(){u({type:"timeout",target:i})}),12e4);i.onerror=i.onload=u,document.head.appendChild(i)}return Promise.all(r)},a.m=e,a.c=n,a.d=function(e,r,t){a.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},a.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},a.t=function(e,r){if(1&r&&(e=a(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(a.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)a.d(t,n,function(r){return e[r]}.bind(null,n));return t},a.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return a.d(r,"a",r),r},a.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},a.p="/",a.oe=function(e){throw console.error(e),e};var i=this.webpackJsonpfrontend=this.webpackJsonpfrontend||[],c=i.push.bind(i);i.push=r,i=i.slice();for(var f=0;f<i.length;f++)r(i[f]);var l=c;t()}([])</script><script src="/static/js/2.784ca970.chunk.js"></script><script src="/static/js/main.33a364ec.chunk.js"></script>
           </div>
          <!-- <img class="img-fluid d-none d-md-inline" src="{{url_for('static', filename='img/otolith-nobg.png')}}" alt="" /> -->
       </div>
@@ -51,10 +51,12 @@
                       <h3 class="font-weight-bold text-info">Our Story</h3>
                       <p class="text-black-50 mb-0">An online tool for estimating fish age from otolith images using Deep Learning.</p>
                       <h6>&nbsp;</h6>
-                      <p class="text-black-50 mb-0">For more details, see: </p>
+                      <p class="text-black-50 mb-0">For more details how the AI platform works, please see: </p>
                       <a href="https://docs.google.com/document/d/1u71MWYG71ziOvh8dw1ky5ZqoOnV19D5j/edit?usp=sharing&ouid=114141129823167870066&rtpof=true&sd=true" target = "_blank">DeepOtolith: A web-tool for fish age estimation from otolith images using deep learning (Documentation).</a>
-		      <h6>&nbsp;</h6>
+					  
+					  <h6>&nbsp;</h6>
                       <p class="text-black-50 mb-0">Sample otolith images can be found at: <a href="https://github.com/dimpolitik/Deep-Otolith" target = "_blank">here</a></p>
+
                  </div>
               </div>
           </div>
@@ -114,9 +116,9 @@
       <div class="container">
            <h4 class="col">References</h4>
                        <ul "text-align: left;">
-                         <li>Ordoñez A. et al. 2020. Explaining decision of deep neural networks used for fish age prediction. PLoS ONE 15(6), e0235013. </li>                       
-                         <li>Politikos D. et al. 2021. Automating fish age estimation combining otolith images and deep learning: the role of multitask learning. Fisheries Science 242, 106033. </li>
-                         <li>Vabø R. et al. 2020. Automatic interpretation of salmon scales using deep learning. Ecological Informatics 63, 101322.</li>
+                        <li>Ordoñes A. et al. 2020. Explaining decision of deep neural networks used for fish age prediction. PLoS ONE 15(6), e0235013. </li>                       
+                        <li>Politikos D. et al. 2021. Automating fish age estimation combining otolith images and deep learning: the role of multitask learning. Fisheries Science 242, 106033. </li>
+                        <li>Vabø R. et al. 2020. Automatic interpretation of salmon scales using deep learning. Ecological Informatics 63, 101322.</li>
                        </ul>
                       
            <h4 class="col">Other</h4>
@@ -127,9 +129,9 @@
                        
           <h4 class="col">Contributors</h4>
                        <ul "text-align: left;">
-                       <li> Web development: Nikos Sikiniotis,  Pavlos Dedousis, Dimitris Politikos</li>
+                       <li> Web development: Nikos Sikiniotis, Pavlos Dedousis, Dimitris Politikos</li>
                        <li> Web release: Dimitris Politikos, George Petasis, Michail Iordanis
-                       <li> AI methods: Dimitris Politikos, George Petasis, Alba Ordoñez, Rune Vabø, Arnt-Børre Salberg, Elde Moen, Ketil Malde</li>
+                       <li> AI methods: Dimitris Politikos, George Petasis, Alba Ordoñes, Rune Vabø, Arnt-Børre Salberg, Elde Moen, Ketil Malde</li>
                        <li> Dataset & Interpretation: Archontia Chatzispyrou, Katerina Anastasopoulou, Chryssi Mytilineou</li>
                        </ul>                      
                        
@@ -178,11 +180,12 @@
               <div class="col-md-4 mb-3 mb-md-0">
                   <div class="card py-4 h-100">
                       <div class="card-body text-center" style="padding-top:30px;">
-                          <img class="img-fluid mb-3 mb-lg-0" src="{{url_for('static', filename='img/norway_resize_imr.png')}}" alt="Bergen University Logo" style="width:140px; height:110px;"/>
+                          <img class="img-fluid mb-3 mb-lg-0" src="{{url_for('static', filename='img/norway_resize_imr.png')}}" alt="Bergen University Logo" style="width:260px; height:110px;"/>
                           <h4 class="text-uppercase m-0">NR, IMR</h4>
                           <hr class="my-4" />
                           <div class="small text-black-50"><a href="https://www3.nr.no/en/projects/cogmar-ubiquitous-cognitive-computer-vision-marine-services" target = "_blank">Norwegian Computing Center</a></div>
-			  <div class="small text-black-50"><a href="https://www.hi.no/en" target = "_blank">Institute of Marine Research (Norway)</a></div>
+                          <div class="small text-black-50"><a href="https://www.hi.no/en" target = "_blank">Institute of Marine Research (Norway)</a></div>
+
                       </div>
                   </div>
               </div>
